<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".MainActivity"/>

    <!-- This is where the "constraints" or "manual" fixes to the UI occur-->
    <!-- A LinearLayout with the style columnLeft that arranges the buttonson the left side of the page -->


    <!--  Getting the wording horizontally next to one-another  -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginTop="225dp"
                android:text="@string/Translation_Language"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/difficulties"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/Source_Language"
                    android:textColor="@color/grey"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>
                <RadioButton
                    android:id="@+id/buttonEasy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lang_english"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/buttonMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lang_spanish"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/buttonHard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lang_german"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/operators"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/Translation_Language"
                    android:textColor="@color/grey"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>
                <RadioButton
                    android:id="@+id/buttonAddition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"

                    android:text="@string/trans_spanish"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
                <RadioButton
                    android:id="@+id/buttonSubtraction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trans_german"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp" />
                <RadioButton
                    android:id="@+id/buttonMultiplication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/trans_english"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start">

                <RadioGroup
                    android:id="@+id/selectDifficulty"
                    android:layout_width="203dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:lines="1"
                    android:maxLines="2"

                    android:text="Select difficulty:"
                    android:textAlignment="textStart"
                    android:textColor="@color/grey"
                    android:textSize="24sp"
                    android:textStyle="bold"


                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!--   Work around - come back to   -->


            <TextView
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="50dp"


                android:lines="1"
                android:maxLines="2"
                android:paddingLeft="0dp"

                android:text="@string/Translation"
                android:textAlignment="textStart"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:textSize="20sp"


                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
        <!--   Sets the values in      -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="0dp"
            >

        <TextView
            android:id="@+id/traslatedTextView"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="61dp"


            android:background="@color/white"
            android:text="TRANSLATED TEXT CHANGE LATER BY ACCESSING THE STRING CLASS IN AN ARRAY"
            android:textColor="@color/black"
            android:textSize="35dp"
            app:cornerRadius="0dp">

        </TextView>
            <!--  Start Button for the opening screen to begin the game      -->
            <fragment
                android:id="@+id/fragment"
                android:layout_width="match_parent"
                android:layout_height="224dp"
                android:layout_marginTop="10dp"

                android:background="@color/white"
                android:textSize="35dp"
                app:cornerRadius="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>



        <!--   Closing Tags     -->
    </LinearLayout>


</FrameLayout>
    </layout>